--- a/Lab6/css/styles.css
+++ b/Lab6/css/styles.css
@@ -34,7 +34,8 @@ td {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 15px;
+    padding-inline: 15px;
+    padding-block: 10px;
     border-radius: 15px;
     text-align: center;
     color: white;
